# docs/swagger.json
@@ -121,6 +121,12 @@
                         "description": "Items per page",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search by name",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
